--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,38 @@
 <resources>
-    <string name="app_name">一键导航(找餐馆)示例</string>
+    <string name="app_name">导航(停车场)</string>
     <string name="app_id">58eedde4</string>
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">手机号码格式不对</string>
+    <string name="error_invalid_password">密码长度必须超过六位</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">此项不能为空</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="title_activity_test">test</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+
+    <string name="action_example">Example action</string>
+
+    <string name="action_settings">Settings</string>
+
+    <string name="menuOpen">open</string>
+    <string name="menuClose">close</string>
+    <string name="no_result">对不起，没有搜索到相关数据！</string>
+    <string name="title_activity_basic">basicActivity</string>
 </resources>
