完成通知和大组队功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="menuClose">close</string>
     <string name="no_result">对不起，没有搜索到相关数据！</string>
     <string name="title_activity_basic">basicActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
